    mode, or stretch to fill the entire screen.

  * Removed superfluous controller option 'PADDLES_IDIR'.

  * Added hotkey for sound on/off.

  * Fixed not working 7800 pause key.

  * Fixed display of negative values in debugger; sometimes they were
    shown as positive.

  * Fixed 'Dancing Plate (Unknown) (PAL)' to use joystick.

  * PNG image support is now conditionally compiled into Stella.  All
    major ports (Linux/macOS/Windows) have it enabled by default.

-Have fun!


5.1.3 to 6.0: (December 23, 2018)

  * Note: because of major TIA sound changes, the state file format has
          changed, and old state files will not work with this release.

  * New cycle exact audio core based on work by Chris Brenner (crispy);
    greatly improved audio emulation accuracy (i.e. E.T., Ms. Pacman).

  * Full rewrite of the audio subsystem; resample TIA output to target
    sample rate directly in Stella.

  * Added option to force stereo sound for all ROMs, or to use the
    setting on a per-ROM basis.

  * Threading: decouple emulation from frame rendering.

  * Main loop rewritten; emulating speed and timing is now much more
    faithful (i.e. speed in Pick'n'Pile).

  * Added preliminary support for 'CTY' bankswitching scheme and recently
    released 'Chetiry' ROMs.  Special thanks to SpiceWare for adding music
    support to this scheme.

  * UI modernization (new widget look, dialog titles added, dialogs
    refactored).

  * The bankswitch scheme can now be forced by naming the ROM with a
    specific extension (ie: .f8s for F8SC, .fe for FE, etc).  The
    supported extensions are the same as the ones from HarmonyCart and
    UnoCart.

  * Audio settings replaced with new 'audio.xxx' settings.

  * FPS setting replaced with speed setting for adjusting emulation speed.

  * Extra functionality for Time Machine dialog (start/stop recording;
    minor fixes).

  * When logging messages to the System Logger, condense similar messages